styles.css
:root {
  --primary: #8c38ff;
  --light: #eeeeee;
  --dark: #212121;
  --flexgap: 10px;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: sans-serif;
}

h1 {
  color: var(--primary);
  font-size: 28px;
  font-weight: 900;
  letter-spacing: 2px;
  text-transform: uppercase;
}

nav {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 99;
  background-color: var(--dark);
  padding: 16px 32px;
  border-bottom: 3px solid var(--primary);
}

img {
  height: auto;
  width: 100%;
}

section {
  color: var(--dark);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
}

section > h1 {
  padding-bottom: 1rem;
}

p {
  font-weight: bold;
}

.project_stage {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: var(--flexgap);
}

.project_stage > * {
  flex: 1;
}

.stages {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: var(--flexgap);
}

.stages > * {
  flex: 1;
}

.content {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  max-width: fit-content;
  margin: 0 auto;
  gap: 4rem;
}

.content > img {
  flex: 1;
}

.content {
  padding-top: 5.55rem;
}

.container {
  max-width: 1280px;
  margin: 0 auto;

  display: flex;
  align-items: center;
  justify-content: space-between;
}

.hamburger {
  display: block;
  position: relative;
  z-index: 1;

  user-select: none;

  appearance: none;
  border: none;
  outline: none;
  background: none;
  cursor: pointer;
}

.hamburger span {
  display: block;
  width: 33px;
  height: 4px;
  margin-bottom: 5px;
  position: relative;

  background-color: var(--light);
  border-radius: 6px;
  z-index: 1;

  transform-origin: 0 0;

  transition: 0.4s;
}

.hamburger:hover span:nth-child(2) {
  transform: translateX(10px);
  background-color: var(--primary);
}

.hamburger.is-active span:nth-child(1) {
  transform: translate(0px, -2px) rotate(45deg);
}

.hamburger.is-active span:nth-child(2) {
  opacity: 0;
  transform: translateX(15px);
}

.hamburger.is-active span:nth-child(3) {
  transform: translate(-3px, 3px) rotate(-45deg);
}

.hamburger.is-active:hover span {
  background-color: var(--primary);
}

.menu {
  display: none;
  flex: 1 1 0%;
  justify-content: flex-end;
  margin: 0 -16px;
}

.menu a {
  color: #fff;
  margin: 0 16px;
  font-weight: 600;
  text-decoration: none;
  transition: 0.4s;
  padding: 8px 16px;
  border-radius: 99px;
}

.menu a.is-active,
.menu a:hover {
  background-color: var(--primary);
}

@media (min-width: 768px) {
  .hamburger {
    display: none;
  }
  .menu {
    display: flex;
  }
}

@media (max-width: 768px) {
  img {
    padding: 1.25rem;
  }
  .content {
    text-align: center;
    gap: 2rem;
  }

  .stages {
    flex-direction: column;
  }
}

